spacing issues on 'members' page with the cards and changed search bar width and text align.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -132,6 +132,7 @@ button.addShow:hover {
   background-color: rgb(20, 20, 20);
   box-shadow: 0 5px 15px rgba(65, 104, 211);
   border-color: rgb(20, 20, 20);
+  width: 100px
  }
 #searchBtn:hover {
   color: rgb(255, 255, 255)!important;
@@ -140,6 +141,8 @@ button.addShow:hover {
 
 #searchText {
   box-shadow: 0 5px 15px rgba(65, 104, 211);
+  text-align: center;
+  width: 370px
 }
 
 #searchText:hover {
